--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,76 @@ html {
 body{
 
     background: #2C2141;
+    min-height: 100vh;
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+.card{
+
+    background: #F8F8F8;
+    border-radius: 16px;
+    max-width: 624px;
+    width: 100%;
+    padding: 32px;
+
+}
+
+.person{
+
+    display: flex;
+    align-items: flex-start;
+}
+.person__header{
+
+    margin-bottom: 32px;
+}
+.person__name{
+    margin: 0;
+    font-weight: normal;
+    font-size: 36px;
+}
+
+.person__photo{
+
+    margin-right: 32px;
+    width: 148px;
+    height: 148px;
+    border-radius: 74px;
+}
+
+.person__position{
+    color:#545454;
+    font-style: italic;
+    font-size: 18px;
+    
+}
+
+.person__description{
+
+    font-size:16px;
+    line-height: 22px;
+
+}
+.person__description--last{
+
+    margin-bottom: 0;
+}
+
+.person__special{
+
+    color:#ed6d05;
+    font-weight: normal;
+}
+
+.person__link{
+
+    color:#e20613;
+    text-decoration: none;
+
+
 }
